<resources>
    <string name="app_name">StarBox</string>
    <string name="quantity_text">Quantity</string>
    <string name="order_button">Order</string>
    <string name="price_text_view">Order Summary</string>
    <string name="topping_text">Topping</string>
    <string name="cream_checkbox">Whipped cream</string>
    <string name="chocolate_text">Chocolate</string>
    <string name="name_textEdit">Name</string>
    <string name="send_order_button">Send Order</string>
    <string name="many_cofee">You cannot have more than 100 coffee</string>
    <string name="zero_cofee">You cannot have less than 1 coffee</string>
    <string name="total">Total</string>
    <string name="name">Name</string>
    <string name="add_cream">Add whipped cream</string>
    <string name="add_chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="resut">Result</string>
    <string name="thanks">Thank you</string>
</resources>
