<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:clickable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/nameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_textEdit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/topping_text"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/whippedCreamBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:onClick="checkBoxClicked"
            android:paddingLeft="24dp"
            android:text="@string/cream_checkbox"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/chocolateBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:onClick="checkBoxClicked"
            android:paddingLeft="24dp"
            android:text="@string/chocolate_text"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/quantity_text"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="decreaseNumber"
                android:text="-"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="increaseNumber"
                android:text="+"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/price_text_view"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:onClick="submitOrder"
            android:text="@string/order_button"
            android:textAllCaps="true"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>